--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">AND_vidal</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_tabata">Tabata</string>
+    <string name="title_nutrition">Nutrition</string>
+    <string name="title_stats">Stats</string>
+    <string name="title_profile">Profile</string>
 </resources>
