--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="title_nutrition">Nutrition</string>
     <string name="title_stats">Stats</string>
     <string name="title_profile">Profile</string>
+
+
+
+    <string name="fab_content_descriptor_settings">settings symbol</string>
+    <string name="fab_content_descriptor_add">add symbol</string>
+    <string name="fab_content_descriptor_filter">filter symbol</string>
 </resources>
