--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,9 @@
     <string name="title_profile">Profile</string>
 
 
-
     <string name="fab_content_descriptor_settings">settings symbol</string>
     <string name="fab_content_descriptor_add">add symbol</string>
     <string name="fab_content_descriptor_filter">filter symbol</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
