--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,14 +15,23 @@
     <!-- ProfileFragment -->
     <string name="title_profile">Profile</string>
 
-    <!-- LoginFragment -->
+    <!-- SignInFragment -->
+    <string name="si_title">Sign In</string>
+    <string name="btn_signin">Sign In</string>
+    <string name="si_goto_signup">Create an account</string>
 
+    <!-- SignUpFragment -->
+    <string name="su_title">Sign Up</string>
+    <string name="btn_signup">Sign Up</string>
 
     <!-- General strings -->
     <string name="fab_content_descriptor_settings">settings symbol</string>
     <string name="fab_content_descriptor_add">add symbol</string>
     <string name="fab_content_descriptor_filter">filter symbol</string>
+    <string name="btn_content_descriptor_back_arrow">back arrow</string>
 
+    <!-- Hint strings -->
+    <string name="hint_email">Enter email</string>
+    <string name="hint_password">Enter password</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
