save before API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AND_vidal</string>
+    <string name="app_name">Work-it-out</string>
     <!-- WorkoutFragment -->
     <string name="title_workout">Workout</string>
 
