--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,7 @@
     <string name="workout_placeholder_name">Workout Name</string>
     <string name="workout_placeholder_description">Workout Description</string>
     <string name="content_descriptor_workout_list_image">Workout list image</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
