--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
 
     <!-- ProfileFragment -->
     <string name="title_profile">Profile</string>
+    <string name="user_placeholder">User</string>
 
     <!-- SignInFragment -->
     <string name="si_title">Sign In</string>
@@ -36,7 +37,10 @@
     <string name="workout_placeholder_name">Workout Name</string>
     <string name="workout_placeholder_description">Workout Description</string>
     <string name="content_descriptor_workout_list_image">Workout list image</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="btn_logout">Logout</string>
+    <string name="content_descriptor_profile_picture_image">Profile picture image</string>
+
 
 </resources>
