--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <!-- WorkoutFragment -->
     <string name="title_workout">Workout</string>
 
+    <string name="title_single_workout">Single Workout Title</string>
+
+
     <!-- TabataFragment -->
     <string name="title_tabata">Tabata</string>
 
@@ -15,14 +18,16 @@
     <!-- ProfileFragment -->
     <string name="title_profile">Profile</string>
     <string name="user_placeholder">User</string>
+    <string name="btn_logout">Logout</string>
+    <string name="content_descriptor_profile_picture">Profile picture image</string>
 
     <!-- SignInFragment -->
-    <string name="si_title">Sign In</string>
+    <string name="title_signin">Sign In</string>
     <string name="btn_signin">Sign In</string>
     <string name="si_goto_signup">Create an account</string>
 
     <!-- SignUpFragment -->
-    <string name="su_title">Sign Up</string>
+    <string name="title_signup">Sign Up</string>
     <string name="btn_signup">Sign Up</string>
 
     <!-- General strings -->
@@ -39,8 +44,8 @@
     <string name="content_descriptor_workout_list_image">Workout list image</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="btn_logout">Logout</string>
-    <string name="content_descriptor_profile_picture_image">Profile picture image</string>
+
+
 
 
 </resources>
