--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="workout_placeholder_id">987</string>
     <string name="workout_category">Workout Category</string>
+    <string name="like_icon">like icon</string>
 
 
 </resources>
